--- a/contenido/includes/head.jade
+++ b/contenido/includes/head.jade
@@ -24,6 +24,7 @@ head
 	script(src='../libreria/js/jquery.slides.min.js')
 	script(src='../libreria/js/fancybox/jquery.fancybox.pack.js')
 	script(src='../libreria/js/fancybox/helpers/jquery.fancybox-media.js')
+	script(src='../libreria/js/jquery.validate.min.js')
 	script(src='../libreria/js/scripts.js')
 	//if lt IE 9
 		script(src='../libreria/js/html5shiv.js')
