--- a/contenido/includes/header.jade
+++ b/contenido/includes/header.jade
@@ -2,7 +2,7 @@ header
 	.container960
 		#logo
 			a(href="index.html")
-				img(src="../imagenes/logo-velemed.png")
+				img(src="../imagenes/logo-velemed.png", alt="Velemed")
 		nav
 			ul
 				li
