--- a/contenido/page.jade
+++ b/contenido/page.jade
@@ -23,10 +23,10 @@ html(lang='es-MX')
 							a(href="#menu-02") Laboratorios Quimicos
 						li
 							a(href="#menu-03") Cursos de Actualización
-					br(clear="all")
+					br.clearfix
 					article#menu-01 
 						h3 Tipos de Exámenes
-						img(src="http://placehold.it/800x150").float-center
+						img(src="http://placehold.it/800x150", alt="placeholder").float-center
 						p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
 						p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
 						
@@ -41,13 +41,13 @@ html(lang='es-MX')
 
 					article#menu-02
 						h3 Laboratorios Quimicos
-						img(src="http://placehold.it/300x200").float-left
+						img(src="http://placehold.it/300x200", alt="placeholder").float-left
 						p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
 						p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
 
 					article#menu-03
 						h3 Cursos de Actualización
-						img(src="http://placehold.it/300x200").float-right
+						img(src="http://placehold.it/300x200", alt="placeholder").float-right
 						p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
 						p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
 
