--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -420,3 +420,10 @@ footer
 	margin-left: $spacer
 .underline
 	border-bottom: 1px solid #FFF
+.clearfix
+	@include clearfix
+.error
+	color: $green
+	font-size: .7em
+input.error
+	color: red
