--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -218,6 +218,7 @@ nav
 	background: url("#{$img}bg-02.png")
 	z-index: 1820
 	margin-top: -200px
+	text-align: right
 #home-04 
 	background: url("#{$img}bg-03.png")
 	z-index: 1830
@@ -230,6 +231,9 @@ nav
 	min-height: 500px
 	position: relative
 	@include clearfix
+	
+	h2 
+		font-size: 3em
 
 	article
 		padding-bottom: 180px
@@ -248,10 +252,12 @@ nav
 	background-image: url("#{$img}g_implementaciones.png")
 .g-umoviles
 	background-image: url("#{$img}g_umoviles.png")
-.g-implementaciones
+	margin-left: 40px !important
+.e-implementaciones
 	background-image: url("#{$img}e_implementaciones.png")
 .e-umoviles
 	background-image: url("#{$img}e_umoviles.png")
+	margin-right: 40px !important
 
 
 /* TABS ---- */
